# NotBadTowerDefense

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: game_atlas.json  ui_atlas.json
src/: Application.cpp  Application.hpp  main.cpp
src/components/: GameComponents.hpp  GameContextComponents.cpp  GameContextComponents.hpp  NavigationComponents.hpp  PhysicsComponents.hpp  RenderComponents.hpp  UIComponents.hpp
src/helpers/: PhysicsHelper.cpp  PhysicsHelper.hpp  SpawnHelper.cpp  SpawnHelper.hpp  TowerBuldingHelper.cpp  TowerBuldingHelper.hpp  UIHelper.cpp  UIHelper.hpp
src/math/: Math2D.hpp  Vector.h  Vector.hpp
src/resources/: Atlas.cpp  Atlas.hpp  Fonts.hpp  Resources.cpp  Resources.hpp  ResourcesUtils.hpp  Sprites.hpp
src/scenes/: DataMaps.hpp  SceneManager.cpp  SceneManager.hpp  Scene_Base.cpp  Scene_Base.hpp  Scene_MainMenu.cpp  Scene_MainMenu.hpp  Scene_TestGame.cpp  Scene_TestGame.hpp
src/systems/: BulletSystems.cpp  BulletSystems.hpp  MovementSystems.cpp  MovementSystems.hpp  Rendering.cpp  Rendering.hpp  TowerSystems.cpp  TowerSystems.hpp  UIEvents.cpp  UIEvents.hpp
src_assets/: GameSpriteSheet.tps  UISpriteSheet.tps
